[gd_scene load_steps=11 format=3 uid="uid://cmki28ry3llom"]

[ext_resource type="Script" path="res://Levels/level_two.gd" id="1_ixwb5"]
[ext_resource type="PackedScene" uid="uid://bgbgc5uijpps3" path="res://world/world_tile_map.tscn" id="1_kpr05"]
[ext_resource type="PackedScene" uid="uid://60hyc6cjqrwc" path="res://world/door.tscn" id="5_ywp2h"]
[ext_resource type="Resource" uid="uid://jxb5p7v5smh1" path="res://DoorConnections/one_two.tres" id="6_exwwy"]
[ext_resource type="PackedScene" uid="uid://cin6suhd1iea4" path="res://enemies/boss_enemy.tscn" id="6_jdpmh"]
[ext_resource type="Resource" uid="uid://ce5ap7jlos8vb" path="res://DoorConnections/two_three.tres" id="7_q0ho3"]
[ext_resource type="PackedScene" uid="uid://co5veaxugsj28" path="res://world/camera_limits.tscn" id="8_4dhnv"]
[ext_resource type="PackedScene" uid="uid://cik78saduhy1c" path="res://world/brick.tscn" id="9_t2ymo"]
[ext_resource type="PackedScene" uid="uid://dnytwre1qtc1g" path="res://world/trigger.tscn" id="9_x0lm2"]
[ext_resource type="PackedScene" uid="uid://cf2fmlwsbgjm1" path="res://world/save_station.tscn" id="10_5t420"]

[node name="LevelTwo" type="Node2D"]
script = ExtResource("1_ixwb5")

[node name="WorldTileMap" parent="." instance=ExtResource("1_kpr05")]
layer_0/tile_data = PackedInt32Array(-2, 65536, 0, 65534, 327680, 1, -65519, 65536, 0, -65520, 65536, 0, -65521, 65536, 0, -65522, 65536, 0, -65523, 65536, 0, -65524, 65536, 0, -65525, 65536, 0, -65526, 65536, 0, -65527, 65536, 0, -65528, 65536, 0, -65529, 65536, 0, -65530, 65536, 0, -65531, 65536, 0, 4, 65536, 2, -65532, 65536, 0, 3, 65536, 2, -65533, 65536, 0, 2, 65536, 2, -65534, 65536, 0, 1, 65536, 2, -65535, 65536, 0, 0, 65536, 2, -65536, 65536, 0, 65535, 65536, 2, -1, 65536, 0, 786454, 65536, 1, 720918, 65536, 1, 458774, 65536, 1, 393238, 65536, 1, 327702, 65536, 0, 131094, 65536, 2, 65558, 65536, 1, 22, 65536, 1, 786453, 65536, 1, 458773, 65536, 1, 393237, 65536, 1, 327701, 65536, 0, 131093, 65536, 2, 65557, 65536, 1, 21, 65536, 1, 786452, 65536, 1, 720916, 65536, 1, 393236, 65536, 1, 327700, 65536, 0, 131092, 65536, 2, 65556, 65536, 1, 20, 65536, 1, 786451, 65536, 1, 720915, 393216, 2, 19, 393216, 1, 786450, 65536, 1, 720914, 65536, 0, 18, 65536, 2, 786449, 65536, 1, 720913, 65536, 0, -65517, 65536, 0, -65518, 65536, 0, 1048598, 65536, 1, 983062, 65536, 1, 917526, 65536, 1, 851990, 65536, 1, 1048597, 65536, 1, 983061, 65536, 1, 917525, 65536, 1, 851989, 65536, 1, 983060, 65536, 1, 917524, 65536, 1, 851988, 65536, 1, 983059, 65536, 1, 917523, 65536, 1, 851987, 65536, 1, 1048594, 65536, 1, 983058, 65536, 1, 917522, 65536, 1, 851986, 65536, 1, 1048593, 65536, 1, 983057, 65536, 1, 917521, 65536, 1, 851985, 65536, 1, 1048592, 65536, 1, 983056, 65536, 1, 917520, 65536, 1, 851984, 65536, 1, 786448, 65536, 1, 720912, 65536, 0, 1048591, 65536, 1, 983055, 65536, 1, 917519, 65536, 1, 851983, 65536, 1, 786447, 65536, 1, 720911, 65536, 0, 1048590, 65536, 1, 983054, 65536, 1, 917518, 65536, 1, 851982, 65536, 1, 786446, 65536, 1, 720910, 65536, 0, 1048589, 65536, 1, 983053, 65536, 1, 917517, 65536, 1, 851981, 65536, 1, 786445, 65536, 1, 720909, 65536, 0, 1048588, 65536, 1, 983052, 65536, 1, 917516, 65536, 1, 851980, 65536, 1, 786444, 65536, 1, 720908, 65536, 0, 1048587, 65536, 1, 917515, 65536, 1, 851979, 65536, 1, 786443, 65536, 1, 720907, 65536, 0, 1048586, 65536, 1, 917514, 65536, 1, 851978, 65536, 1, 786442, 65536, 1, 720906, 65536, 0, 1048585, 65536, 1, 917513, 65536, 1, 1048584, 65536, 1, 917512, 65536, 1, 851976, 65536, 1, 786440, 65536, 1, 720904, 65536, 0, 1048583, 65536, 1, 917511, 65536, 1, 851975, 65536, 1, 786439, 65536, 1, 720903, 65536, 0, 1048582, 65536, 1, 917510, 65536, 1, 851974, 65536, 1, 786438, 65536, 1, 720902, 65536, 0, 1048581, 65536, 1, 917509, 65536, 1, 851973, 65536, 1, 786437, 65536, 1, 720901, 65536, 0, 1048580, 65536, 1, 983044, 65536, 1, 917508, 65536, 1, 851972, 65536, 1, 786436, 65536, 1, 720900, 65536, 0, 1048579, 65536, 1, 983043, 65536, 1, 917507, 65536, 1, 851971, 65536, 1, 786435, 65536, 1, 720899, 65536, 0, 1048578, 65536, 1, 983042, 65536, 1, 917506, 65536, 1, 851970, 65536, 1, 786434, 65536, 1, 720898, 65536, 0, 1048577, 65536, 1, 983041, 65536, 1, 917505, 65536, 1, 851969, 65536, 1, 786433, 65536, 1, 720897, 65536, 0, 1048576, 65536, 1, 983040, 65536, 1, 917504, 65536, 1, 851968, 65536, 1, 786432, 65536, 1, 720896, 65536, 0, 1114111, 65536, 1, 1048575, 65536, 1, 983039, 65536, 1, 1114110, 65536, 1, 1048574, 65536, 1, 983038, 65536, 1, 1114109, 65536, 1, 1048573, 65536, 1, 983037, 65536, 1, 1114108, 65536, 1, 1048572, 65536, 1, 983036, 65536, 1, 917500, 65536, 1, 851964, 65536, 1, 786428, 65536, 1, 589819, 65536, 1, 524283, 65536, 1, 458747, 65536, 1, 589818, 65536, 1, 524282, 65536, 1, 458746, 65536, 1, 589817, 65536, 1, 524281, 65536, 1, 458745, 65536, 1, 393211, 65536, 0, 196603, 65536, 2, 131067, 65536, 1, 65531, 65536, 1, -5, 65536, 0, 393210, 327680, 2, 327674, 131072, 1, 262138, 131072, 1, 196602, 327680, 1, 131066, 65536, 1, 65530, 65536, 1, -6, 65536, 0, 393209, 65536, 1, 327673, 65536, 1, 262137, 65536, 1, 196601, 65536, 1, 65529, 65536, 1, -7, 65536, 0, 393208, 0, 1, 327672, 0, 1, 262136, 0, 1, 196600, 0, 1, 65528, 0, 1, -8, 0, 0, 65533, 65536, 1, -3, 65536, 0, 65532, 65536, 1, -4, 65536, 0, 720892, 65536, 1, 655356, 65536, 1, 589820, 65536, 1, 786427, 65536, 1, 720891, 65536, 1, 655355, 65536, 1, 786426, 65536, 1, 720890, 65536, 1, 655354, 65536, 1, 786425, 65536, 1, 720889, 65536, 1, 655353, 65536, 1, 786424, 0, 1, 720888, 0, 1, 655352, 0, 1, 589816, 0, 1, 917503, 65536, 1, 851967, 65536, 1, 786431, 65536, 0, 917502, 65536, 1, 851966, 65536, 1, 786430, 327680, 2, 917501, 65536, 1, 851965, 65536, 1, 786429, 65536, 1, 458749, 65536, 1, 393213, 65536, 0, 458748, 65536, 1, 393212, 65536, 0, 851977, 65536, 1, 786441, 65536, 1, 720905, 65536, 0, -65510, 131072, 0, -65511, 65536, 0, -65512, 65536, 0, -65513, 65536, 0, -65514, 65536, 0, -65515, 65536, 0, -65516, 65536, 0, 524280, 0, 1, 458744, 0, 1, 1114134, 65536, 2, 1114133, 65536, 2, 1114130, 65536, 2, 1114129, 65536, 2, 1114128, 65536, 2, 1114127, 65536, 2, 1114126, 65536, 2, 1114125, 65536, 2, 1114124, 65536, 2, 1114123, 65536, 2, 1114122, 65536, 2, 1114121, 65536, 2, 1114120, 65536, 2, 1114119, 65536, 2, 1114118, 65536, 2, 1114117, 65536, 2, 1114116, 65536, 2, 1114115, 65536, 2, 1114114, 65536, 2, 1114113, 65536, 2, 1114112, 65536, 2, 1179647, 65536, 2, 1179646, 65536, 2, 1179645, 65536, 2, 1179644, 65536, 2, 1114138, 131072, 2, 1048602, 131072, 1, 983066, 131072, 1, 917530, 131072, 1, 851994, 131072, 1, 786458, 131072, 1, 720922, 131072, 1, 655386, 131072, 1, 589850, 131072, 1, 524314, 131072, 1, 458778, 131072, 1, 393242, 131072, 1, 327706, 131072, 1, 262170, 131072, 1, 196634, 131072, 1, 131098, 131072, 1, 65562, 131072, 1, 26, 131072, 1, 1114137, 65536, 2, 1048601, 65536, 1, 983065, 65536, 1, 851993, 65536, 1, 786457, 65536, 1, 720921, 65536, 1, 655385, 65536, 1, 589849, 65536, 1, 524313, 65536, 1, 458777, 65536, 1, 393241, 65536, 1, 327705, 65536, 1, 262169, 65536, 1, 196633, 65536, 1, 131097, 65536, 1, 65561, 65536, 1, 25, 65536, 1, 1114136, 65536, 2, 1048600, 65536, 1, 983064, 65536, 1, 851992, 65536, 1, 786456, 65536, 1, 720920, 65536, 1, 655384, 65536, 1, 589848, 65536, 1, 393240, 65536, 1, 327704, 65536, 1, 131096, 65536, 1, 65560, 65536, 1, 24, 65536, 1, 1114135, 65536, 2, 1048599, 65536, 1, 983063, 65536, 1, 851991, 65536, 1, 786455, 65536, 1, 720919, 65536, 1, 393239, 65536, 1, 327703, 393216, 2, 65559, 65536, 1, 23, 65536, 1, 1179643, 65536, 2, 1114107, 65536, 1, 1048571, 65536, 1, 983035, 65536, 1, 917499, 65536, 1, 851963, 65536, 1, 1179642, 65536, 2, 1114106, 65536, 1, 1048570, 65536, 1, 983034, 65536, 1, 917498, 65536, 1, 851962, 65536, 1, 1179641, 65536, 2, 1114105, 65536, 1, 1048569, 65536, 1, 983033, 65536, 1, 917497, 65536, 1, 851961, 65536, 1, 1179640, 0, 2, 1114104, 0, 1, 1048568, 0, 1, 983032, 0, 1, 917496, 0, 1, 851960, 0, 1, 131065, 65536, 1, 131064, 0, 1, 983051, 65536, 1, 983050, 65536, 1, 983049, 65536, 1, 983048, 65536, 1, 983047, 65536, 1, 983046, 65536, 1, 983045, 65536, 1, 1114132, 65536, 2, 1048596, 65536, 1, 1114131, 65536, 2, 1048595, 65536, 1, 917529, 65536, 1, 917528, 65536, 1, 917527, 65536, 1, 524312, 65536, 1, 458776, 65536, 1, 458775, 65536, 1, 131095, 393216, 1, 720893, 65536, 1, 655357, 65536, 1, 589821, 65536, 1, 524285, 65536, 1, 524284, 65536, 1, 17, 65536, 2, 16, 65536, 2, 15, 65536, 2, 14, 65536, 2, 13, 65536, 2, 12, 65536, 2, 11, 65536, 2, 10, 65536, 2, 9, 65536, 2, 8, 65536, 2, 7, 65536, 2, 6, 65536, 2, 5, 65536, 2, 655383, 65536, 1, 655382, 65536, 1, 589847, 65536, 1, 524311, 65536, 1, 589846, 65536, 1, 524310, 65536, 1, 458772, 65536, 1, 524307, 0, 1, 524308, 65536, 1, 524309, 65536, 1, 458771, 0, 1, 393235, 0, 1, 327699, 0, 0, 131091, 0, 2, 65555, 0, 1, 720917, 65536, 1, 655381, 65536, 1, 589845, 65536, 1, 196606, 131072, 2, 131070, 131072, 1, 196605, 65536, 2, 131069, 65536, 1, 196604, 65536, 2, 131068, 65536, 1, 720894, 131072, 1, 655358, 131072, 1, 589822, 131072, 1, 524286, 131072, 1, 458750, 131072, 1, 393214, 131072, 0, 655380, 65536, 1, 589844, 65536, 1, 655379, 0, 1, 589843, 0, 1, 262168, 65536, 1, 196632, 65536, 1, 262167, 0, 1, 196631, 0, 1)

[node name="Door" parent="." instance=ExtResource("5_ywp2h")]
position = Vector2(-72, 70)
new_level_path = "res://Levels/level_one.tscn"
connection = ExtResource("6_exwwy")

[node name="Door2" parent="." instance=ExtResource("5_ywp2h")]
position = Vector2(360, 70)
new_level_path = "res://Levels/level_three.tscn"
connection = ExtResource("7_q0ho3")

[node name="CameraLimits" parent="." instance=ExtResource("8_4dhnv")]
offset_left = -64.0
offset_top = -15.0
offset_right = 352.0
offset_bottom = 200.0

[node name="BossEnemy" parent="." node_paths=PackedStringArray("missile_spawn") instance=ExtResource("6_jdpmh")]
z_index = 1
position = Vector2(136, 112)
targets = Array[NodePath]([NodePath("../Targets/BossReturnTarget"), NodePath("../Targets/BossReturnTarget2"), NodePath("../Targets/BossReturnTarget3"), NodePath("../Targets/BossReturnTarget4"), NodePath("../Targets/BossReturnTarget5"), NodePath("../Targets/BossReturnTarget6"), NodePath("../Targets/BossReturnTarget7"), NodePath("../Targets/BossReturnTarget8"), NodePath("../Targets/BossReturnTarget9")])
missile_spawn = NodePath("../MissileSpawnTarget")

[node name="Targets" type="Node" parent="."]

[node name="BossReturnTarget" type="Marker2D" parent="Targets"]
position = Vector2(64, 72)

[node name="BossReturnTarget2" type="Marker2D" parent="Targets"]
position = Vector2(48, 104)

[node name="BossReturnTarget3" type="Marker2D" parent="Targets"]
position = Vector2(160, 96)

[node name="BossReturnTarget4" type="Marker2D" parent="Targets"]
position = Vector2(200, 56)

[node name="BossReturnTarget5" type="Marker2D" parent="Targets"]
position = Vector2(240, 104)

[node name="BossReturnTarget6" type="Marker2D" parent="Targets"]
position = Vector2(112, 144)

[node name="BossReturnTarget7" type="Marker2D" parent="Targets"]
position = Vector2(136, 56)

[node name="BossReturnTarget8" type="Marker2D" parent="Targets"]
position = Vector2(40, 144)

[node name="BossReturnTarget9" type="Marker2D" parent="Targets"]
position = Vector2(224, 144)

[node name="Bricks" type="Node2D" parent="."]
visible = false

[node name="Brick" parent="Bricks" instance=ExtResource("9_t2ymo")]
position = Vector2(-32, 64)

[node name="Brick4" parent="Bricks" instance=ExtResource("9_t2ymo")]
position = Vector2(-32, 48)

[node name="Brick2" parent="Bricks" instance=ExtResource("9_t2ymo")]
position = Vector2(304, 64)

[node name="Brick3" parent="Bricks" instance=ExtResource("9_t2ymo")]
position = Vector2(304, 48)

[node name="Trigger" parent="." instance=ExtResource("9_x0lm2")]
position = Vector2(-16, 48)
collision_mask = 4

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Trigger"]
polygon = PackedVector2Array(0, -8, 8, 0, 8, 16, 8, 32, 0, 40, 0, 48, 16, 48, 16, -16, 0, -16)

[node name="SaveStation" parent="." instance=ExtResource("10_5t420")]
visible = false
position = Vector2(320, 80)

[node name="MissileSpawnTarget" type="Marker2D" parent="."]
position = Vector2(136, 165)

[connection signal="tree_exited" from="BossEnemy" to="." method="_on_boss_enemy_tree_exited"]
[connection signal="trigger_entered" from="Trigger" to="." method="_on_trigger_trigger_entered"]
